<resources>
    <string name="app_name">Popular Movie</string>
    <string name="action_settings">Settings</string>
    <string name="description_poster">Poster</string>

    <string name="pref_sort_key" translatable="false">sorting</string>
    <string name="pref_sort_label">Sort by</string>

    <string name="pref_sort_popular_label">Most Popular</string>
    <string name="pref_sort_popular_value" translatable="false">popular</string>
    <string name="pref_sort_rating_label">Top Rating</string>
    <string name="pref_sort_rating_value" translatable="false">top_rated</string>
    <string name="pref_sort_favorite_value" translatable="false">favorite</string>

    <string name="msg_err_no_internet">No internet connection</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="image_description">Cover image</string>
    <string name="description_button_play">Play</string>
    <string name="title_activity_news_detail">Detail Info</string>
    <string name="description_logo">Logo image</string>
    <string name="desc_button_favorite">Favorite</string>
    <string name="synopsis_title">Overview:</string>
    <string name="label_trailers">Trailers:</string>
    <string name="label_reviews">Reviews:</string>
    <string name="menu_favorite">Favorite</string>

</resources>
