<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context="com.example.fajar.popular_movie_stage_2.NewsDetailActivityFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space_between_areas"
            android:background="@color/moviedetailTitle"
            android:elevation="@dimen/elevation"
            android:gravity="center_vertical"

            android:minHeight="@dimen/title_area_height"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/header_one_text_size"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_between_areas"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_marginTop="@dimen/space_between_areas"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_image_view"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginLeft="@dimen/screen_left_right_margin"
                android:contentDescription="@string/description_logo"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_between_areas"
                    android:textSize="@dimen/header_two_text_size" />

                <TextView
                    android:id="@+id/movie_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_between_areas"
                    android:textSize="@dimen/header_three_text_size" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_between_areas"
                    android:textStyle="normal|bold" />

                <ImageButton
                    android:id="@+id/button_favorite"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/desc_button_favorite" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_between_areas"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_marginTop="@dimen/space_between_areas"
            android:text="@string/synopsis_title"
            android:textSize="@dimen/header_three_text_size" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_between_areas"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_marginTop="@dimen/space_between_areas"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thickness"
            android:layout_marginBottom="@dimen/space_between_areas"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_marginTop="@dimen/space_between_areas"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/trailers_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/label_trailers"
            android:textSize="@dimen/header_three_text_size"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_trailers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_weight="1"
            android:paddingTop="@dimen/space_between_areas" />

        <TextView
            android:id="@+id/review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/label_reviews"
            android:textSize="@dimen/header_three_text_size"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_reviews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/screen_left_right_margin"
            android:layout_marginRight="@dimen/screen_left_right_margin"
            android:layout_weight="1"
            android:paddingTop="@dimen/space_between_areas" />

    </LinearLayout>
</ScrollView>
